fix: Update default z-index of ck to 1 (#292)
* fix: Update default z-index of ck to 1

* Change version bump for richtext-ckeditor5 to minor

* fix: Update z-index

--- a/src/javascript/RichTextCKEditor5/RichTextCKEditor5-overrides.css
+++ b/src/javascript/RichTextCKEditor5/RichTextCKEditor5-overrides.css
@@ -50,7 +50,7 @@
 
 :root,
 body.ck-fullscreen {
-    --ck-z-default: 10555;
+    --ck-z-default: 1000;
     --ck-z-modal: calc(var(--ck-z-default) + 999);
     --ck-z-fullscreen: 1300;
 }
